# spice-server

./: NEWS
client/: Makefile.am  glz_decoder.cpp
server/: Makefile.am  agent-msg-filter.c  cache_item.h  canvas.c  canvas.h  char-device.c  char-device.h  common.h  cursor-channel.c  cursor-channel.h  cursor_channel.c  cursor_channel.h  dcc-encoders.c  dcc-encoders.h  dcc-send.c  dcc.c  dcc.h  dcc_encoders.c  dcc_encoders.h  dcc_send.c  dispatcher.c  dispatcher.h  display-channel.c  display-channel.h  display_channel.c  display_channel.h  glz-encoder-dict.c  glz-encoder-dict.h  glz-encoder-priv.h  glz-encoder.c  glz-encoder.h  glz_encoder.c  image-cache.c  image-cache.h  inputs-channel.c  inputs_channel.c  jpeg-encoder.c  jpeg_encoder.c  main-channel.c  main-dispatcher.c  (+55 more)
server/tests/: Makefile.am  basic_event_loop.c  replay.c  test_display_base.c
